# fmcli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude/skills/fmcli-guide/: SKILL.md
.github/workflows/: ci.yml
docs/specs/: auth_strategy.md  overview.md
src/fmcli/: __init__.py  main.py
src/fmcli/cli/: auth.py  auth_config.py  common.py  completions.py  config.py  error_handler.py  explain.py  metadata.py  profile.py  record.py
src/fmcli/core/: compat.py  config.py  dry_run.py  encoding.py  errors.py  log.py  masking.py  output.py
src/fmcli/domain/: envelopes.py  error_codes.py  models.py  types.py
src/fmcli/infra/: auth_store.py  config_store.py  filemaker_api.py  http_client.py  profile_store.py  session_cache.py  undo_store.py
src/fmcli/services/: api_factory.py  auth_service.py  explain_service.py  metadata_service.py  query_utils.py  record_service.py  session_helper.py
tests/integration/: conftest.py  test_auth.py  test_explain.py  test_metadata.py  test_record.py
tests/integration/__snapshots__/: test_auth.ambr  test_explain.ambr  test_metadata.ambr  test_record.ambr
tests/unit/: conftest.py  helpers.py  test_api_factory.py  test_auth_cli.py  test_auth_config.py  test_auth_service.py  test_auth_store.py  test_cli.py  test_compat.py  test_completions.py  test_config_cli.py  test_config_store.py  test_dry_run.py  test_envelopes.py  test_error_parametrize.py  test_errors.py  test_explain.py  test_explain_cli.py  test_explain_service.py  test_filemaker_api.py  test_filter.py  test_http_client.py  test_log.py  test_metadata_cli.py  test_metadata_service.py  test_metadata_service_extended.py  test_models_extended.py  test_output.py  test_password_stdin.py  test_profile_cli.py  test_profile_store.py  test_query_parametrize.py  test_query_utils.py  test_record_cli.py  test_record_create.py  test_record_service.py  test_record_service_extended.py  test_record_update.py  test_record_upload.py  test_session_cache.py  (+3 more)
